tests/src/frontend/syntax/invalid/for_c_1.sk
fun main(): void {
  for (;;) {
    void
  };
}
